# telme

./: .gitignore  .npmrc  ARCHITECTURE.md  CHANGELOG.md  PRD.md  README.md  USER_GUIDE.md  VERIFICATION.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
b2b/: 00-README.md
b2b/architecture/: 01-saas-architecture.md  02-tenant-isolation.md
b2b/commercial/: 01-pricing-strategy.md  02-gtm-strategy.md  03-funding-strategy.md  04-pitch-deck-outline.md
b2b/market-research/: 01-problem-landscape.md  02-competitive-analysis.md  03-target-segments.md
b2b/services/: 01-service-landscape.md  02-connector-design.md  03-source-tier-plan.md
docs/: BACKLOG.md  DESIGN_SYSTEM.md  WIREFRAMES.md
src/: App.tsx
src-tauri/: BUILD_AND_RELEASE.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: verify_all.rs  verify_e2e.rs  verify_watcher.rs
src-tauri/icons/: icon.icns
src-tauri/src/: chunker.rs  config.rs  db.rs  embedder.rs  error.rs  extractor.rs  folders.rs  indexer.rs  lib.rs  main.rs  schema.rs  search.rs  walker.rs  watcher.rs
src/components/: EmptyState.tsx  ResultList.tsx  StatusBar.tsx  TitleBar.tsx
src/lib/: types.ts
src/styles/: index.css
