[package]
name = "telme"
version = "0.1.0"
description = "Search everything by meaning, fully local."
authors = ["swaroop"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "telme_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-opener = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Phase 2 — Indexing
rusqlite = { version = "0.31", features = ["bundled"] }
walkdir = "2"
ignore = "0.4"
text-splitter = "0.15"
directories = "5"
parking_lot = "0.12"
crossbeam-channel = "0.5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
